--- a/code/machine-learning-with-ghouls-goblins-and-ghosts.ipynb
+++ b/code/machine-learning-with-ghouls-goblins-and-ghosts.ipynb
@@ -22,6 +22,10 @@
    },
    "outputs": [],
    "source": [
+    "# Author : Jo, Gwan Woo, jgw1413@naver.com\n",
+    "# Supervisor : Na, In Seop, ypencil@hanmail.net\n",
+    "# Starting Project : 2019.1.4\n",
+    "\n",
     "# Import the required libraries\n",
     "import numpy as np # linear algebra\n",
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
@@ -1031,7 +1035,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
